# personal_financial_app/backend/finance_api/views/mixins.py
@@ -21,13 +21,18 @@ class OwnerScopedMixin:
 
     owner_field = 'owner'
     owner_lookup = None
+    # Models that hold money default a missing currency to the user's base one.
+    currency_field = None
 
     def get_queryset(self):
         lookup = self.owner_lookup or self.owner_field
         return super().get_queryset().filter(**{lookup: self.request.user})
 
     def perform_create(self, serializer):
-        if self.owner_field is None:
-            serializer.save()
-        else:
-            serializer.save(**{self.owner_field: self.request.user})
+        extra = {}
+        if self.owner_field is not None:
+            extra[self.owner_field] = self.request.user
+        if self.currency_field and not serializer.validated_data.get(self.currency_field):
+            from ..services.snapshot_service import base_currency_for
+            extra[self.currency_field] = base_currency_for(self.request.user)
+        serializer.save(**extra)
